fixed image overflow and results page styles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -344,17 +344,17 @@ input[name="search-submit"]:hover {
 }
 
 
-.flex .col-lg-4 {
+.flex .col-lg-4, .search-result .col-lg-6 {
   background: rgba(0, 0, 0, 0.5);
   padding-top: 10px;
 }
 
-.flex .col-lg-4 h3 {
+.flex .col-lg-4 h3, .search-result .col-lg-6 {
   color: #fefefe;
   font-family: 'Aref Ruqaa', serif;
 }
 
-.flex .col-lg-4 a {
+.flex .col-lg-4 a, .search-result .col-lg-6 a {
   color: #fefefe;
   display: block;
   padding-left: 5px;
@@ -399,7 +399,13 @@ a:hover > .fa {
   margin: 0 25%;
 }
 
+.search-result img {
+  width: 100%;
+}
 
+.btn-block {
+  margin: 1em 0;
+}
 
 
 
